# DHT

./: .gitignore  CMakeLists.txt  cl.sh  config.txt  run_benchmark.sh
benchmark/: run_benchmark_consistent_hashing.cpp  run_benchmark_static_partitioning.cpp
common/: MurmurHash3.cpp  config_t.cc  config_t.h  connection_pool.h  load_config.h  node_properties.h  threadpool.h  xxHash.h
concurrent_hash_table/: global_lock_concurrent_hash_table.h  striped_lock_concurrent_hash_table.h
config/: sunlab.conf  sunlab_ip.txt
dht/: dht_batching.h  dht_common.h  dht_consistent_hashing.h  dht_static_partitioning.h
include/common/: dht_common.h  spin_lock.h  threadpool.h  utils.h
include/dht/: consensus_interface.h  dht_common.h  dht_message_batcher.h  dht_static_partitioning.h  dht_transaction_manager.h  node_properties.h  raft_engine.h
include/hash_table/: global_lock_concurrent_hash_table.h  sequential_hash_table.h  striped_lock_concurrent_hash_table.h  timestamped_striped_lock_concurrent_hash_table.h
include/network/: buffered_socket.h  connection_pool.h
logs/: log_0.txt  log_1.txt  log_2.txt  parse_logs.ipynb
logs/impl1/: consistent_hashing_benchmark_results.csv  consistent_hashing_plots.ipynb  static_partitioning_benchmark_results.csv  static_partitioning_plots.ipynb
node/: dht_consistent_hashing_node.h  dht_node.h  dht_static_partitioning_node.h  node.h  p2p_node.h  ring_topology_node.h  text_client.cc  text_server.cc
sequential_hash_table/: sequential_hash_table.h
src/common/: MurmurHash3.cpp  utils.cpp
src/dht/: dht_execution.cpp  dht_message_batcher.cpp  dht_networking.cpp  dht_public_interface.cpp  dht_static_partitioning.cpp  dht_transaction_manager.cpp  node_properties.cpp  raft_engine.cpp
src/network/: connection_pool.cpp
tests/: test_connection_pool.cpp  test_dht_consistent_hashing.cpp  test_dht_node.cpp  test_dht_ring_node.cpp  test_dht_static_partitioning.cpp  test_global_lock_concurrent_hash_table.cpp  test_rht.cpp  test_sequential_hash_table.cpp  test_striped_lock_concurrent_hash_table.cpp  test_ts_hash_table.cpp  text_client.cc  text_server.cc
